--- a/config/nginx.conf
+++ b/config/nginx.conf
@@ -5,11 +5,11 @@
 upstream django_app {
     # Stratégie de load balancing : round-robin (par défaut)
     # Chaque nouvelle requête va au serveur suivant dans la liste.
-    server web-labo3:8000;
+    server app:8000;
     # Lorsque nous scalerons à plusieurs instances, nous les ajouterons ici.
     # Par exemple :
-    # server web-labo3-1:8000;
-    # server web-labo3-2:8000;
+    # server app-1:8000;
+    # server app-2:8000;
 }
 
 server {
