--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -37,6 +37,7 @@ jobs:
       DB_PORT: 5432
       DJANGO_SETTINGS_MODULE: config.settings
       PYTHONPATH: .
+      REDIS_URL: redis://localhost:6379/1
 
     steps:
       - name:  Checkout repo
